Can be used to download PDFs from Modern Slavery Statement URL link

--- a/notebooks/download-pdf.ipynb
+++ b/notebooks/download-pdf.ipynb
@@ -1,6 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# First version to download Modern Slavery Statement PDFs.\n",
+    "\n",
+    "Cannot handle HTML format slavery statements"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -12,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,19 +29,21 @@
     "import numpy as np\n",
     "from os import getcwd, path\n",
     "import urllib\n",
+    "from requests.exceptions import HTTPError\n",
     "import pickle\n",
     "from time import sleep\n",
     "import functools\n",
+    "import requests\n",
     "from func_timeout import func_timeout, FunctionTimedOut"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "PROJECT_NAME = 'modern_slavery'\n",
+    "PROJECT_NAME = 'modern_slavery_registry'\n",
     "PROJECT_PATH = f\"{getcwd()[:getcwd().find(PROJECT_NAME)]}{PROJECT_NAME}\"\n",
     "DATA_PATH = f\"{PROJECT_PATH}\\\\data\"\n",
     "SHEET_PATH = f\"{DATA_PATH}\\\\sheets\"\n",
@@ -43,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,17 +67,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "E:\\RA Work\\RA - Prof. Shawn Bhimani\\modern_slavery\\data\\pickles\\saved_SIDs exists, found - 11044\n",
-      "E:\\RA Work\\RA - Prof. Shawn Bhimani\\modern_slavery\\data\\pickles\\failed_SIDs exists, found - 4139\n",
-      "E:\\RA Work\\RA - Prof. Shawn Bhimani\\modern_slavery\\data\\pickles\\pdf_not_found_SIDs exists, found - 2471\n",
-      "E:\\RA Work\\RA - Prof. Shawn Bhimani\\modern_slavery\\data\\pickles\\timeout_SIDs exists, found - 265\n"
+      "E:\\Projects\\modern_slavery_registry\\data\\pickles\\saved_SIDs exists, found - 11044\n",
+      "E:\\Projects\\modern_slavery_registry\\data\\pickles\\failed_SIDs exists, found - 4020\n",
+      "E:\\Projects\\modern_slavery_registry\\data\\pickles\\pdf_not_found_SIDs exists, found - 2471\n",
+      "E:\\Projects\\modern_slavery_registry\\data\\pickles\\timeout_SIDs exists, found - 264\n"
      ]
     }
    ],
@@ -110,7 +121,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Total SIDs worked on : 17799\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f\"Total SIDs worked on : {len(saved_SIDs + failed_SIDs + pdf_not_found_SIDs + timeout_SIDs)}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -284,7 +312,7 @@
        "4      2018-2019  "
       ]
      },
-     "execution_count": 71,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -296,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -315,7 +343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -329,42 +357,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "for i in (df.drop_duplicates(subset=['Statement ID', 'URL'])[['Statement ID', 'URL']].values):\n",
-    "    sid = i[0]\n",
-    "    url = i[1]\n",
-    "    if sid in saved_SIDs:\n",
-    "        print(f\"Already downloaded for SID - {sid}\")\n",
-    "    elif sid in failed_SIDs:\n",
-    "        print(f\"Already downloading failed for SID - {sid}\")\n",
-    "    elif sid in timeout_SIDs:\n",
-    "        print(f\"Already downloading timeout for SID - {sid}\")\n",
-    "    else:\n",
-    "        try:\n",
-    "            doitReturnValue = func_timeout(timeout=MAX_DOWNLOAD_TIME,\n",
-    "                                           func=download_pdf, \n",
-    "                                           args=[url, sid])\n",
-    "            saved_SIDs.append(int(sid))\n",
-    "            save_pickle(saved_SIDs, file_name=f\"{PICKLE_PATH}\\\\saved_SIDs\")\n",
-    "            print(f\"-Downloaded {len(saved_SIDs)} / {TOTAL_UNIQUE_SIDs}-\")\n",
-    "            sleep(1)\n",
-    "        except FunctionTimedOut: # when more than MAX_DOWNLOAD_TIME\n",
-    "            timeout_SIDs.append(int(sid))\n",
-    "            save_pickle(timeout_SIDs, file_name=f\"{PICKLE_PATH}\\\\timeout_SIDs\")\n",
-    "            print(f\"-Downloading timeout {len(timeout_SIDs)} / {TOTAL_UNIQUE_SIDs}-\")\n",
-    "            continue \n",
-    "        except:\n",
-    "            failed_SIDs.append(int(sid))\n",
-    "            save_pickle(failed_SIDs, file_name=f\"{PICKLE_PATH}\\\\failed_SIDs\")\n",
-    "            print(f\"-Downloading failed {len(failed_SIDs)} / {TOTAL_UNIQUE_SIDs}-\")"
+    "def get_pdf_url_from_sid(sid):\n",
+    "    \"\"\"Returns PDF url for input sid.\"\"\"\n",
+    "    return df[df['Statement ID']==sid]['URL'].values[0]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -432,24 +436,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def get_pdfurl(sid):\n",
-    "    return df[df['Statement ID']==sid]['URL'].values[0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "9224-https://www.eurocompliance.co.uk/about-us/policies-and-compliance/\n"
+      "10370-https://www.derwentlondon.com/uploads/downloads/investors/Corporate_Governance/170412_Derwent_London_Modern_Slavery_Statement_2017.pdf\n"
      ]
     }
    ],
@@ -460,66 +454,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Total PDF download :    11044  / 17799\n",
-      "Total PDF not found :   2471  / 17799\n",
-      "Total failed download : 4139 / 17799\n",
-      "Total timeout download: 265/ 17799\n"
+      "Total PDFs available       : 17799\n",
+      "Total PDFs downloaded      : 11044\n",
+      "Total PDFs not found       : 2471\n",
+      "Total PDFs failed download : 4020\n",
+      "Total PDFs timeout download: 264\n",
+      "Total PDFs worked on       : 17799\n"
      ]
     }
    ],
    "source": [
-    "print(f\"Total PDF download :    {len(saved_SIDs)}  / {TOTAL_UNIQUE_SIDs}\")\n",
-    "print(f\"Total PDF not found :   {len(pdf_not_found_SIDs)}  / {TOTAL_UNIQUE_SIDs}\")\n",
-    "print(f\"Total failed download : {len(failed_SIDs)} / {TOTAL_UNIQUE_SIDs}\")\n",
-    "print(f\"Total timeout download: {len(timeout_SIDs)}/ {TOTAL_UNIQUE_SIDs}\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 74,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "17919"
-      ]
-     },
-     "execution_count": 74,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "len(saved_SIDs + pdf_not_found_SIDs + failed_SIDs + timeout_SIDs)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 75,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(2471, 3662)"
-      ]
-     },
-     "execution_count": 75,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "t = df[df['Statement ID'].isin(pdf_not_found_SIDs)][['Statement ID', 'URL']]\n",
-    "len(t.drop_duplicates()), len(t)"
+    "print(f\"Total PDFs available       : {TOTAL_UNIQUE_SIDs}\")\n",
+    "print(f\"Total PDFs downloaded      : {len(saved_SIDs)}\")\n",
+    "print(f\"Total PDFs not found       : {len(pdf_not_found_SIDs)}\")\n",
+    "print(f\"Total PDFs failed download : {len(failed_SIDs)}\")\n",
+    "print(f\"Total PDFs timeout download: {len(timeout_SIDs)}\")\n",
+    "print(f\"Total PDFs worked on       : {len(saved_SIDs) + len(pdf_not_found_SIDs) + len(failed_SIDs) + len(timeout_SIDs)}\")"
    ]
   },
   {
@@ -532,6 +489,75 @@
     "    pdf_not_found_SIDs)\n",
     "  ].to_excel(f\"{SHEET_PATH}\\modernslaveryregistry_pdf_not_found.xlsx\", \n",
     "             index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "11316-https://www.laterooms.com/en/static/modernslavery\n"
+     ]
+    }
+   ],
+   "source": [
+    "random_sid = np.random.choice(pdf_not_found_SIDs)\n",
+    "print(f\"{random_sid}-{get_pdf_url_from_sid(random_sid)}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "110402"
+      ]
+     },
+     "execution_count": 81,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sid = 30402\n",
+    "sid = 44998\n",
+    "# sid = 11316\n",
+    "# download_pdf(url=get_pdf_url_from_sid(sid=sid), sid=sid)\n",
+    "\n",
+    "open('example.pdf', \n",
+    "     'wb').write(requests.get(get_pdf_url_from_sid(sid=sid), \n",
+    "                              allow_redirects=True).content)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for i, sid in enumerate(failed_SIDs):\n",
+    "    print(f\"Running sid-{i+1} out of {len(failed_SIDs)}\")\n",
+    "    url = get_pdf_url_from_sid(sid)\n",
+    "    file_name = f\"SID-{sid}\"\n",
+    "    try:\n",
+    "        open(f\"{PDF_PATH}\\\\{file_name}.pdf\", \n",
+    "             'wb').write(requests.get(url, \n",
+    "                                      timeout=5,\n",
+    "                                      allow_redirects=True).content)\n",
+    "    except HTTPError as http_err:\n",
+    "        print(f'HTTP error occurred: {http_err}')  # Python 3.6\n",
+    "    except Exception as err:\n",
+    "        print(f'Other error occurred: {err}')  # Python 3.6\n",
+    "    else:\n",
+    "        print('Success!')\n",
+    "        "
    ]
   }
  ],
