--- a/notebooks/20201130-statement-cleaning.ipynb
+++ b/notebooks/20201130-statement-cleaning.ipynb
@@ -680,9 +680,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "modern-slavery",
+   "display_name": "modern_slavery",
    "language": "python",
-   "name": "modern-slavery"
+   "name": "modern_slavery"
   },
   "language_info": {
    "codemirror_mode": {
@@ -694,7 +694,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.6"
+   "version": "3.9.0"
   }
  },
  "nbformat": 4,
