Further text cleaning and topic modelling

--- a/notebooks/20201203-statement-cleaning-additional.ipynb
+++ b/notebooks/20201203-statement-cleaning-additional.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -97,6 +97,7 @@
        "      <th>final_statement</th>\n",
        "      <th>final_statement(E/N)</th>\n",
        "      <th>final_statement_cleaned</th>\n",
+       "      <th>statement_hash</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -111,6 +112,7 @@
        "      <td>K LINE\\nHOLDINC (EUROPE) LTD.\\nModern Slavery ...</td>\n",
        "      <td>E</td>\n",
        "      <td>holdinc europe ltd modern slavery act transpar...</td>\n",
+       "      <td>54a3be2e54d7e83866249741309a4fec</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -123,6 +125,46 @@
        "      <td>K LINE\\nHOLDINC (EUROPE) LTD.\\nModern Slavery ...</td>\n",
        "      <td>E</td>\n",
        "      <td>holdinc europe ltd modern slavery act transpar...</td>\n",
+       "      <td>c20780d56b38fdee0d585b1dcf32b246</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>28659</td>\n",
+       "      <td>\"K\" Line (Europe) Limited</td>\n",
+       "      <td>35092</td>\n",
+       "      <td>https://img1.wsimg.com/blobby/go/7695baff-3f0f...</td>\n",
+       "      <td>K LINE\\nHOLDINC (EUROPE) LTD.\\nModern Slavery ...</td>\n",
+       "      <td>K LINE\\nHOLDINC (EUROPE) LTD.\\nModern Slavery ...</td>\n",
+       "      <td>K LINE\\nHOLDINC (EUROPE) LTD.\\nModern Slavery ...</td>\n",
+       "      <td>E</td>\n",
+       "      <td>holdinc europe ltd modern slavery act transpar...</td>\n",
+       "      <td>ba93a3f728608e0a8aa60765e7433654</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>28661</td>\n",
+       "      <td>\"K\" Line LNG Shipping Limited</td>\n",
+       "      <td>35092</td>\n",
+       "      <td>https://img1.wsimg.com/blobby/go/7695baff-3f0f...</td>\n",
+       "      <td>K LINE\\nHOLDINC (EUROPE) LTD.\\nModern Slavery ...</td>\n",
+       "      <td>K LINE\\nHOLDINC (EUROPE) LTD.\\nModern Slavery ...</td>\n",
+       "      <td>K LINE\\nHOLDINC (EUROPE) LTD.\\nModern Slavery ...</td>\n",
+       "      <td>E</td>\n",
+       "      <td>holdinc europe ltd modern slavery act transpar...</td>\n",
+       "      <td>160f2895b670d4054d3dfd9ae1231b87</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>28658</td>\n",
+       "      <td>Polar LNG Shipping (UK) Limited</td>\n",
+       "      <td>35092</td>\n",
+       "      <td>https://img1.wsimg.com/blobby/go/7695baff-3f0f...</td>\n",
+       "      <td>K LINE\\nHOLDINC (EUROPE) LTD.\\nModern Slavery ...</td>\n",
+       "      <td>K LINE\\nHOLDINC (EUROPE) LTD.\\nModern Slavery ...</td>\n",
+       "      <td>K LINE\\nHOLDINC (EUROPE) LTD.\\nModern Slavery ...</td>\n",
+       "      <td>E</td>\n",
+       "      <td>k line holdinc europe ltd modern slavery act t...</td>\n",
+       "      <td>c7892425aa35519093b7a0179d245a0d</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -132,35 +174,77 @@
        "   Company ID                              Company Statement ID  \\\n",
        "0        7676      \"K\" Line Holding Europe Limited        35092   \n",
        "1       28660  \"K\" Line Bulk Shipping (UK) Limited        35092   \n",
+       "2       28659            \"K\" Line (Europe) Limited        35092   \n",
+       "3       28661        \"K\" Line LNG Shipping Limited        35092   \n",
+       "4       28658      Polar LNG Shipping (UK) Limited        35092   \n",
        "\n",
        "                                                 URL  \\\n",
        "0  https://img1.wsimg.com/blobby/go/7695baff-3f0f...   \n",
        "1  https://img1.wsimg.com/blobby/go/7695baff-3f0f...   \n",
+       "2  https://img1.wsimg.com/blobby/go/7695baff-3f0f...   \n",
+       "3  https://img1.wsimg.com/blobby/go/7695baff-3f0f...   \n",
+       "4  https://img1.wsimg.com/blobby/go/7695baff-3f0f...   \n",
        "\n",
        "                                    statement(Edgar)  \\\n",
        "0  K LINE\\nHOLDINC (EUROPE) LTD.\\nModern Slavery ...   \n",
        "1  K LINE\\nHOLDINC (EUROPE) LTD.\\nModern Slavery ...   \n",
+       "2  K LINE\\nHOLDINC (EUROPE) LTD.\\nModern Slavery ...   \n",
+       "3  K LINE\\nHOLDINC (EUROPE) LTD.\\nModern Slavery ...   \n",
+       "4  K LINE\\nHOLDINC (EUROPE) LTD.\\nModern Slavery ...   \n",
        "\n",
        "                                    statement(Nitin)  \\\n",
        "0  K LINE\\nHOLDINC (EUROPE) LTD.\\nModern Slavery ...   \n",
        "1  K LINE\\nHOLDINC (EUROPE) LTD.\\nModern Slavery ...   \n",
+       "2  K LINE\\nHOLDINC (EUROPE) LTD.\\nModern Slavery ...   \n",
+       "3  K LINE\\nHOLDINC (EUROPE) LTD.\\nModern Slavery ...   \n",
+       "4  K LINE\\nHOLDINC (EUROPE) LTD.\\nModern Slavery ...   \n",
        "\n",
        "                                     final_statement final_statement(E/N)  \\\n",
        "0  K LINE\\nHOLDINC (EUROPE) LTD.\\nModern Slavery ...                    E   \n",
        "1  K LINE\\nHOLDINC (EUROPE) LTD.\\nModern Slavery ...                    E   \n",
+       "2  K LINE\\nHOLDINC (EUROPE) LTD.\\nModern Slavery ...                    E   \n",
+       "3  K LINE\\nHOLDINC (EUROPE) LTD.\\nModern Slavery ...                    E   \n",
+       "4  K LINE\\nHOLDINC (EUROPE) LTD.\\nModern Slavery ...                    E   \n",
        "\n",
-       "                             final_statement_cleaned  \n",
-       "0  holdinc europe ltd modern slavery act transpar...  \n",
-       "1  holdinc europe ltd modern slavery act transpar...  "
+       "                             final_statement_cleaned  \\\n",
+       "0  holdinc europe ltd modern slavery act transpar...   \n",
+       "1  holdinc europe ltd modern slavery act transpar...   \n",
+       "2  holdinc europe ltd modern slavery act transpar...   \n",
+       "3  holdinc europe ltd modern slavery act transpar...   \n",
+       "4  k line holdinc europe ltd modern slavery act t...   \n",
+       "\n",
+       "                     statement_hash  \n",
+       "0  54a3be2e54d7e83866249741309a4fec  \n",
+       "1  c20780d56b38fdee0d585b1dcf32b246  \n",
+       "2  ba93a3f728608e0a8aa60765e7433654  \n",
+       "3  160f2895b670d4054d3dfd9ae1231b87  \n",
+       "4  c7892425aa35519093b7a0179d245a0d  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "data.head(2)"
+    "data.head(5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of #NA: 9745\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f\"Number of #NA: {np.sum(data['final_statement_cleaned']=='#NA')}\")"
    ]
   },
   {
@@ -179,19 +263,36 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|█████████████████████████████████████████████████████████████████████████| 28364/28364 [00:00<00:00, 97502.70it/s]\n"
+      "100%|█████████████████████████████████████████████████████████████████████████| 28364/28364 [00:00<00:00, 84165.19it/s]\n"
      ]
     }
    ],
    "source": [
-    "# generating unique for statement to avoid processing multiple time processing of same statement\n",
+    "# generating unique for statement to avoid processing of same statement multiple times\n",
     "data[\"statement_hash\"] = [\n",
     "    generate_hash(statement) for statement in tqdm(data[\"final_statement_cleaned\"])]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of duplicates (including #NA): 13776\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f\"Number of duplicates (including #NA): {np.sum(data.duplicated('statement_hash'))}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -201,27 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(28364, 14588)"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "len(data), len(subset_data)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -295,7 +376,7 @@
        "4  k line holdinc europe ltd modern slavery act t...  "
       ]
      },
-     "execution_count": 10,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -313,14 +394,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|███████████████████████████████████████████████████████████████████████████| 14588/14588 [01:01<00:00, 238.56it/s]\n"
+      "100%|███████████████████████████████████████████████████████████████████████████| 14588/14588 [01:05<00:00, 222.37it/s]\n"
      ]
     }
    ],
@@ -335,14 +416,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████████████████████████████████████████████████████████████████████| 14588/14588 [00:08<00:00, 1704.75it/s]\n"
+      "100%|██████████████████████████████████████████████████████████████████████████| 14588/14588 [00:09<00:00, 1595.89it/s]\n"
      ]
     }
    ],
@@ -364,7 +445,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -373,7 +454,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -390,7 +471,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -416,7 +497,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -450,7 +531,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -460,14 +541,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████████████████████████████████████████████████████████████████████| 14588/14588 [00:02<00:00, 5200.48it/s]\n"
+      "100%|██████████████████████████████████████████████████████████████████████████| 14588/14588 [00:02<00:00, 5281.64it/s]\n"
      ]
     }
    ],
@@ -482,14 +563,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████████████████████████████████████████████████████████████████████| 14588/14588 [00:08<00:00, 1628.83it/s]\n"
+      "100%|██████████████████████████████████████████████████████████████████████████| 14588/14588 [00:08<00:00, 1686.27it/s]\n"
      ]
     }
    ],
@@ -511,7 +592,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -521,7 +602,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -538,11 +619,109 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
     "subset_data[\"cleaned_statements\"] = cleaned_statements"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>statement_hash</th>\n",
+       "      <th>final_statement_cleaned</th>\n",
+       "      <th>cleaned_statements</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>54a3be2e54d7e83866249741309a4fec</td>\n",
+       "      <td>holdinc europe ltd modern slavery act transpar...</td>\n",
+       "      <td>holdinc europe ltd modern slavery act transpar...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>c20780d56b38fdee0d585b1dcf32b246</td>\n",
+       "      <td>holdinc europe ltd modern slavery act transpar...</td>\n",
+       "      <td>holdinc europe ltd modern slavery act transpar...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>ba93a3f728608e0a8aa60765e7433654</td>\n",
+       "      <td>holdinc europe ltd modern slavery act transpar...</td>\n",
+       "      <td>holdinc europe ltd modern slavery act transpar...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>160f2895b670d4054d3dfd9ae1231b87</td>\n",
+       "      <td>holdinc europe ltd modern slavery act transpar...</td>\n",
+       "      <td>holdinc europe ltd modern slavery act transpar...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>c7892425aa35519093b7a0179d245a0d</td>\n",
+       "      <td>k line holdinc europe ltd modern slavery act t...</td>\n",
+       "      <td>line holdinc europe ltd modern slavery act tra...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                     statement_hash  \\\n",
+       "0  54a3be2e54d7e83866249741309a4fec   \n",
+       "1  c20780d56b38fdee0d585b1dcf32b246   \n",
+       "2  ba93a3f728608e0a8aa60765e7433654   \n",
+       "3  160f2895b670d4054d3dfd9ae1231b87   \n",
+       "4  c7892425aa35519093b7a0179d245a0d   \n",
+       "\n",
+       "                             final_statement_cleaned  \\\n",
+       "0  holdinc europe ltd modern slavery act transpar...   \n",
+       "1  holdinc europe ltd modern slavery act transpar...   \n",
+       "2  holdinc europe ltd modern slavery act transpar...   \n",
+       "3  holdinc europe ltd modern slavery act transpar...   \n",
+       "4  k line holdinc europe ltd modern slavery act t...   \n",
+       "\n",
+       "                                  cleaned_statements  \n",
+       "0  holdinc europe ltd modern slavery act transpar...  \n",
+       "1  holdinc europe ltd modern slavery act transpar...  \n",
+       "2  holdinc europe ltd modern slavery act transpar...  \n",
+       "3  holdinc europe ltd modern slavery act transpar...  \n",
+       "4  line holdinc europe ltd modern slavery act tra...  "
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "subset_data.head()"
    ]
   },
   {
